<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.mareu.AddMeetingActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subject"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/subject"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
        <MultiAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textEmailAddress"
        android:hint="@string/mail"
        tools:text="@string/add_users_mail"
        >

        </MultiAutoCompleteTextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_date"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:layout_gravity="end"
                app:cornerRadius="20dp"
                android:text="@string/date"
                android:id="@+id/btn_date"
                android:layout_alignParentRight="true"

                />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_time_start"
                android:layout_below="@+id/in_date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:layout_gravity="end"
                app:cornerRadius="20dp"
                android:text="@string/timeStart"
                android:id="@+id/btn_time_start"
                android:layout_below="@+id/btn_date"
                android:layout_alignLeft="@+id/btn_date"
                android:layout_alignStart="@+id/btn_date" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_time_end"
                android:layout_below="@+id/in_time_start"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:layout_gravity="end"
                app:cornerRadius="20dp"
                android:text="@string/timeEnd"
                android:id="@+id/btn_time_end"
                android:layout_below="@+id/btn_time_start"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/room"
                android:textSize="18sp"
                android:padding="12dp"/>
            <Spinner
                android:id="@+id/spinner_room_to_select"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/room"
            />
        </GridLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_meeting"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_gravity="center"
            app:cornerRadius="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/save"/>

    </LinearLayout>