<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_mareu_meeting_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pastil_states_item_list"
...
        android:fontFamily="sans-serif-black"
        tools:text="Réunion B - 16h00 - Mario"
        android:textColor="@color/black"
        android:textSize="@dimen/meeting_item_title_text_size"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/mails_item_list"
        app:layout_constraintEnd_toStartOf="@+id/item_list_delete_button"
        app:layout_constraintStart_toEndOf="@+id/pastil_states_item_list"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/meeting_item_title_margin_start"
        android:layout_marginRight="@dimen/meeting_item_title_margin_end" />

    <TextView
...
